--- a/index.html
+++ b/index.html
@@ -6,6 +6,65 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover"/>
   <title>Incentive Calculator</title>
 
+/* SIMPLE PASSWORD PROTECTION (Plain-text password – Admin friendly)
+   ==================================================================
+   👉 Admin sets the password here in plain text.
+   👉 Allowed: letters, numbers, special characters.
+   👉 Example: "Tanmoy@2026"
+*/
+
+const PASSWORD = "Tanmoy";   // ← ADMIN CHANGES ONLY THIS
+
+// Stores unlock per-tab:
+const SESSION_KEY = "ic_unlocked_simple_v1";
+
+// Render-blocking password overlay:
+function showSimpleGate(){
+  document.body.insertAdjacentHTML("beforeend", `
+    <div id="pwdGate" style="
+      position:fixed; inset:0; background:rgba(0,0,0,0.1);
+      display:grid; place-items:center; z-index:99999;">
+      <div style="
+        background:white; padding:20px; width:90%; max-width:350px;
+        border-radius:12px; border:1px solid #ddd;">
+        
+        <h2 style="margin:6px 0 10px; font-size:20px;">Enter Password</h2>
+        <p style="font-size:13px; color:#555;">This portal is for internal use.</p>
+
+        <input id="pwdInput" type="password" placeholder="Password"
+          style="width:100%; margin-top:12px; padding:10px; font-size:16px; border-radius:8px; border:1px solid #ccc;">
+
+        <div id="pwdErr" style="color:#b91c1c; display:none; margin-top:8px; font-size:13px;">
+          Wrong password. Please try again.
+        </div>
+
+        <button id="pwdBtn" style="
+          width:100%; margin-top:14px; padding:12px; border:0;
+          background:#0f4c81; color:white; font-size:16px; border-radius:10px;">
+          Unlock
+        </button>
+      </div>
+    </div>
+  `);
+
+  document.getElementById("pwdBtn").onclick = () => {
+    const entered = document.getElementById("pwdInput").value.trim();
+    if (entered === PASSWORD){
+      sessionStorage.setItem(SESSION_KEY, "1");
+      document.getElementById("pwdGate").remove();
+    } else {
+      document.getElementById("pwdErr").style.display = "block";
+    }
+  };
+}
+
+// Auto-show gate on first load
+document.addEventListener("DOMContentLoaded", () => {
+  if (PASSWORD && sessionStorage.getItem(SESSION_KEY) !== "1"){
+    showSimpleGate();
+  }
+});
+  
   <!-- PWA & Icons (fixed) -->
   manifest.webmanifest
   icons/icon-192.png
