--- a/index.html
+++ b/index.html
@@ -208,7 +208,7 @@
        ============================ */
 
     // ADMIN: set your password here in plain text (4–64 chars recommended)
-    const PASSWORD = "Tanmoy";   // ← change this to your actual password
+    const PASSWORD = "Akshay";   // ← change this to your actual password
 
     const SESSION_KEY = "ic_unlocked_simple_v1";
 
